--- a/Tank/SteelSmashing/Assembly-CSharp.csproj
+++ b/Tank/SteelSmashing/Assembly-CSharp.csproj
@@ -48,21 +48,17 @@
      <Compile Include="Assets\scripts\DestroyBullets.cs" />
      <Compile Include="Assets\scripts\Emeny_AI.cs" />
      <Compile Include="Assets\scripts\EnemyShoot.cs" />
+     <Compile Include="Assets\scripts\Health.cs" />
      <Compile Include="Assets\scripts\Move.cs" />
      <Compile Include="Assets\scripts\Move2.cs" />
      <Compile Include="Assets\scripts\Radar.cs" />
+     <Compile Include="Assets\scripts\TankCollision.cs" />
      <Compile Include="Assets\scripts\shoot.cs" />
- <Reference Include="UnityEngine.Advertisements">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/UnityEngine.Advertisements.dll</HintPath>
- </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Networking">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
- </Reference>
- <Reference Include="UnityEngine.Analytics">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
  </Reference>
  <Reference Include="Mono.Cecil">
  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/Mono.Cecil.dll</HintPath>
